syntax = "proto3";

option go_package = "github.com/elangreza14/gen/payment;gen";

message CreateAccountRequest {
    uint32 id = 1;
    string user_id = 2;
    string currency_code = 3;
    uint32 product_id = 4;
    uint32 balance = 5;
    string name = 6;
}

message CreateAccountReply {
    string status = 1;
}

service Payment {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountReply) {}
}